syntax = "proto3";
package survey;

// import "common/common.proto";
// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/duration.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto  
option go_package = "./;survey";


message GetAuthorizationOutput {
  bool authorized = 1;
}

message GetAuthorizationInput {
  string token = 1;
}

service SuveyService {
	rpc GetAuthorization (GetAuthorizationInput) returns (GetAuthorizationOutput) {}
}